--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
 		"react-native": "0.38.0"
 	},
 	"devDependencies": {
+		"babel-eslint": "^7.1.1",
 		"babel-jest": "17.0.2",
 		"babel-preset-react-native": "1.9.0",
+		"eslint": "^3.11.1",
+		"eslint-config-react-app": "^0.3.0",
+		"eslint-plugin-flowtype": "^2.28.2",
+		"eslint-plugin-import": "^2.2.0",
+		"eslint-plugin-jsx-a11y": "^3.0.1",
+		"eslint-plugin-react": "^6.7.1",
 		"jest": "17.0.3",
 		"jest-react-native": "17.1.0",
 		"react-test-renderer": "~15.4.0-rc.4"
