--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 	},
 	"dependencies": {
 		"react": "~15.4.0-rc.4",
-		"react-native": "0.38.0"
+		"react-native": "0.38.0",
+		"redux": "^3.6.0",
+		"redux-thunk": "^2.1.0"
 	},
 	"devDependencies": {
 		"babel-eslint": "^7.1.1",
