--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"isomorphic-fetch": "^2.2.1",
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.38.0",
 		"redux": "^3.6.0",
