--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.38.0",
 		"react-redux": "^4.4.6",
+		"realm": "^0.15.0",
 		"redux": "^3.6.0",
 		"redux-thunk": "^2.1.0"
 	},
