--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"isomorphic-fetch": "^2.2.1",
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.38.0",
+		"react-native-vector-icons": "^3.0.0",
 		"react-redux": "^4.4.6",
 		"realm": "^0.15.0",
 		"redux": "^3.6.0",
