--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@exponent/ex-navigation": "^2.1.4",
 		"isomorphic-fetch": "^2.2.1",
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.38.0",
@@ -22,6 +23,7 @@
 		"babel-eslint": "^7.1.1",
 		"babel-jest": "17.0.2",
 		"babel-preset-react-native": "1.9.0",
+		"babel-preset-react-native-stage-0": "^1.0.1",
 		"eslint": "^3.11.1",
 		"eslint-config-react-app": "^0.3.0",
 		"eslint-plugin-flowtype": "^2.28.2",
